--- a/app/src/components/app.less
+++ b/app/src/components/app.less
@@ -1,37 +1,59 @@
+@import "../../../node_modules/normalize.css/normalize.css";
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-  a {
-    margin-right: 1em;
+  //display: flex;
+  //justify-content: center;
+  //align-items: center;
+  margin: 0 auto;
+  width: 1280px;
+  height: 614px;
+  .nav-wrapper {
+    display: flex;
+    background-color: #FFFFFF;
+    .bar {
+      flex: 1;
+      background-color: #FFFFFF;
+      width: 50%;
+      height: 70px;
+      color: white;
+      .logo {
+        height: 58px;
+        width: 68px;
+      }
+      h2 {
+        font-size: 48px;
+        color: #FF0000;
+        font-family: Helvetica;
+      }
+    }
+    .nav {
+      display: flex;
+      flex: 1;
+      font-size: 0;
+      line-height: 70px;
+      text-align: center;
+      a {
+        flex: 1;
+        text-decoration: none;
+        display: inline-block;
+        color: #FF0000;
+        font-size: 16px;
+        &:hover {
+          text-decoration: none;
+        }
+      }
+    }
   }
-}
-
-a {
-  color: #222222;
-  text-decoration: none;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .banner-wrapper {
+    width: 1280px;
+    position: absolute;
+    top: 70px;
+    z-index: -1;
   }
-  to {
-    transform: rotate(360deg);
+  .children-wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+
   }
 }
 
