--- a/app/src/components/app.less
+++ b/app/src/components/app.less
@@ -1,4 +1,10 @@
 @import "../../../node_modules/normalize.css/normalize.css";
+
+div, p {
+  margin: 0;
+  padding: 0;
+}
+
 .App {
   //display: flex;
   //justify-content: center;
@@ -47,12 +53,12 @@
     width: 1280px;
     position: absolute;
     top: 70px;
-    z-index: -1;
+    z-index: -10;
   }
   .children-wrapper {
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 544px;
 
   }
 }
