--- a/app/src/components/plugin/banner/index.less
+++ b/app/src/components/plugin/banner/index.less
@@ -6,3 +6,7 @@
     //height: 670px;
   }
 }
+.swiper-button-next, .swiper-button-prev, .swiper-pagination{
+  position: relative;
+  z-index: 0;
+}
