--- a/app/src/components/users/login/index.less
+++ b/app/src/components/users/login/index.less
@@ -1,103 +1,112 @@
-.login-wrapper{
-  display:none;
-  .mask{
-    width: 1280px;
-    height:670px;
-    background:rgba(0, 0, 0, 0.3);
-    position: absolute;
-    left: 0;
-    top: 0;
-    z-index: 1000;
-  }
-  .login{
-    width: 500px;
-    height: 380px;
-    position: fixed;
-    left: 50%;
-    top: 50%;
-    margin-left: -300px;
-    margin-top: -200px;
-    z-index: 1100;
-    border-radius: 5px;
-    background: #FFFFFF;
-    .window-bar{
-      width: 500px;
-      height: 20px;
-      background: #4990E2;
-      position: relative;
-      img{
-        margin: 1px;
-        position: absolute;
-        right:0;
-        top:0;
-        width: 15px;
-        height: 15px;
-      }
-    }
-    .login-line{
-      span{
-        display: block;
-        font-size: 12px;
-        color: #8B8B8B;;
-        position: relative;
-        &:before,&:after{
-          content: '';
-          position: absolute;
-          top:52%;
-          background: #8B8B8B;
-          //背景线的宽和高
-          width: 150px;
-          height: 1px;
-        }
-        &:before{
-          //调整背景线的左右距离
-          left:31px;
-        }
-        &:after{
-          right:31px;
-        }
-      }
-    }
-    .login-with-others{
-      padding-top: 64px;
-      margin-bottom: -35px;
-      .image-boxes{
-        position: relative;
-        width: 400px;
-        height: 72px;
-        margin: 0 auto;
-        img{
-          width: 40px;
-          height: 40px;
-          margin-right: 31px;
-          margin-left: 31px;
-        }
-      }
-    }
-    .login-with-phone{
-      .login-form{
-        padding-left: 125px;
-        padding-top: 10px;
-        a{
-          display: block;
-          margin-top: -10px;
-          margin-bottom: 5px;
-        }
-      }
-      .login-btn{
-        &:hover{
-          background: #4990E2;
-        }
-        p{
-          width:148px;
-          height:10px;
-        }
-      }
-      img{
-        width: 20px;
-        height: 20px;
-      }
-    }
+@import "../../../common/style/style.css";
 
+.login-wrapper {
+  //display:none;
+  .mask {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background: #d8d8d8 50%;
+    opacity: 0.5;
+  }
+  .login {
+    //display:none;
+    position: absolute;
+    top: 100px;
+    left: 390px;
+    width: 500px;
+    height: 350px;
+    background: #fff;
+    img {
+      width: 40px;
+    }
+    .window-bar {
+      position: relative;
+      box-sizing: border-box;
+      background: linear-gradient(#80C3F3, #4990E2);
+      //border: 1px inset #979797;
+      height: 20px;
+      width: 100%;
+      img {
+        height: 15px;
+        width: 15px;
+        position: absolute;
+        top: 3px;
+        right: 5px;
+      }
+    }
+    .logo-wrapper {
+      display: flex;
+      justify-content: center;
+      //width: 270px;
+      margin: 10px auto;
+      //vertical-align: middle;
+      .logo {
+        width: 40px;
+        height: 40px;
+        vertical-align: middle;
+      }
+      .logo-text {
+        font-size: 40px;
+        line-height: 40px;
+        height: 40px;
+        color: #FF4100;
+      }
+
+    }
+    .icon-wrapper {
+
+    width: 270px;
+      display: flex;
+      margin: 10px auto;
+      .icon-item {
+        flex: 1;
+        text-align: center;
+      }
+    }
+    .form-wrapper {
+      width: 270px;
+      display: flex;
+      margin: 2px auto;
+      .login-input {
+        width: 270px;
+        height: 30px;
+        border: 1px #979797 solid;
+        border-radius: 9px;
+        margin: 5px 0;
+      }
+      .login-button {
+        display: block;
+        width: 148px;
+        height: 30px;
+        margin: 0 auto;
+        border: 1px;
+        outline: none;
+        border-radius: 9px;
+        background: linear-gradient(#80C3F3, #4990E2);
+      }
+
+    }
+    .line-through {
+      display: flex;
+      width: 70%;
+      //text-align: center;
+      margin: 10px auto;
+      font-size: 12px;
+      .line-through-text {
+        //padding: 0 200px;
+        margin: 0 20px;
+      }
+      .line-through-line{
+        flex: 1;
+        height: 1px;
+        //width: 100px;
+        position: relative;
+        top: 6px;
+        border-bottom: 2px solid #000 ;
+      }
+    }
   }
 }
+
