【story 66】输入投票码页面完成
Change-Id: I3c4f133707d1480d5902af71e98b340fefc21628

--- a/app/src/components/app.less
+++ b/app/src/components/app.less
@@ -22,10 +22,13 @@ div, p {
       height: 70px;
       color: white;
       .logo {
+        vertical-align: baseline;
         height: 58px;
         width: 68px;
       }
-      h2 {
+      .logo-text {
+        margin-left: 5px;
+        display: inline-block;
         font-size: 48px;
         color: #FF0000;
         font-family: Helvetica;
@@ -57,7 +60,7 @@ div, p {
   }
   .children-wrapper {
     position: relative;
-    width: 100%;
+    width: 101%;
     height: 544px;
 
   }
