--- a/app/src/components/users/register/index.less
+++ b/app/src/components/users/register/index.less
@@ -57,7 +57,7 @@
         outline: none;
         border: 1px;
         border-radius: 2px;
-        font-size: 12px;
+        font-size: 0.7em;
         background: #4990E2;
         cursor: pointer;
       }
