--- a/app/src/components/content/poll/index.less
+++ b/app/src/components/content/poll/index.less
@@ -13,6 +13,7 @@
     height: 600px;
     margin: 0 auto;
     border: 1px solid #979797;
+    border-radius: 5px;
     .logo-wrapper {
       box-sizing: border-box;
       margin: 50px auto;
