--- a/app/src/components/users/login/index.less
+++ b/app/src/components/users/login/index.less
@@ -19,11 +19,13 @@
     width: 500px;
     height: 350px;
     background: #fff;
+    box-shadow: 4px 4px 2px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
     img {
       width: 40px;
     }
     .window-bar {
-      position: relative;
+      //position: relative;
       box-sizing: border-box;
       background: linear-gradient(#80C3F3, #4990E2);
       //border: 1px inset #979797;
