--- a/app/src/components/app.less
+++ b/app/src/components/app.less
@@ -52,11 +52,16 @@ div, p {
       }
     }
   }
-
+  .banner-wrapper {
+    width: 1280px;
+    position: absolute;
+    top: 70px;
+    z-index: -10;
+  }
   .children-wrapper {
     position: relative;
-    width: 101%;
-    height: 544px;
+    width: 100%;
+    height: 542px;
 
   }
 }
