--- a/app/src/components/users/register/index.less
+++ b/app/src/components/users/register/index.less
@@ -14,10 +14,12 @@
   width: 500px;
   height: 350px;
   background: #fff;
-
+  box-shadow: 4px 4px 2px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
   .window-bar {
-    position:relative;
+    //position:relative;
     box-sizing: border-box;
+    //border-radius: 5px 5px 0 0;
     background: linear-gradient(#80C3F3, #4990E2);
     //border: 1px inset #979797;
     height: 20px;
