--- a/app/src/components/content/vote/index.less
+++ b/app/src/components/content/vote/index.less
@@ -1,15 +1,19 @@
-.vote_wrapper{
+.vote-wrapper {
+  margin-top: 1px;
+  height: 652px;
+  width: 100%;
   .mask {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 652px;
     z-index: -1;
     background: #d8d8d8 50%;
     opacity: 0.5;
   }
-  .vote{
-    flex-wrap: wrap;
-    display: flex;
+  .vote {
+    position: absolute;
+    top: 72px;
+    left: 45px;
   }
 }
 
