--- a/app/src/components/content/personalcenter/index.less
+++ b/app/src/components/content/personalcenter/index.less
@@ -15,7 +15,7 @@
     opacity: 0.5;
   }
   .personal-form {
-    width: 70%;
+    width: 80%;
     box-shadow: 4px 4px 2px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
     margin: 0 auto;
@@ -26,25 +26,35 @@
     .form-item {
       display: flex;
       justify-content: center;
-      padding: 40px;
+      padding: 20px;
       vertical-align: top;
-      .personal-label {
+      .personal-label,
+      .personal-detail{
         flex: 0 0 70px;
         text-align: center;
         padding: 8px;
       }
-      .personal-input {
-        flex: 1;
+      .personal-password {
+        width: 100px;
         height: 25px;
-        border: 1px solid #8B8B8B;
         border-radius: 5px;
         padding: 5px;
-        &:hover,
-        &:focus {
-          border: 1px solid #4990E2;
+        position: relative;
+        button{
+          position: absolute;
+          right: -70px;
+          top: 0;
+          width: 70px;
+          padding: 10px;
+          font-size: 10px;
+          border: 1px;
+          outline: none;
+          background: #4990E2;
+          cursor: pointer;
+          border-radius: 5px;
         }
       }
-      .create-user {
+      .save-password {
         width: 100px;
         padding: 10px 20px;
         font-size: 14px;
