【story=66】Ques组件父子组件传参
Change-Id: I80c558ae4fd55d62125a6ce4a5b92d45faa4271a

--- a/app/src/components/content/question/index.less
+++ b/app/src/components/content/question/index.less
@@ -1,4 +1,4 @@
-.poll-wrapper {
+.question-wrapper {
   .mask {
     position: absolute;
     top:0;
@@ -16,7 +16,7 @@
     border-radius: 5px;
     .logo-wrapper {
       box-sizing: border-box;
-      margin: 50px auto;
+      margin: 0px auto;
       width: 600px;
       height: 300px;
       border: 1px solid #979797;
