--- a/app/src/components/content/question/index.less
+++ b/app/src/components/content/question/index.less
@@ -1,73 +1,70 @@
 .question-wrapper {
+  width: 800px;
+  height: 600px;
+  border: 1px solid #979797;
+  margin: 0 auto;
   .mask {
     position: absolute;
-    top:0;
+    top: 0;
     left: 0;
     right: 0;
     bottom: 0;
     background: #FFFFFF;
     opacity: 1;
   }
-  .poll {
-    width: 800px;
-    height: 600px;
+  .list-wrapper {
+    width: 500px;
     margin: 0 auto;
-    border: 1px solid #979797;
+    //border: 1px solid #979797;
     border-radius: 5px;
-    .logo-wrapper {
+    text-align: center;
+    .title {
+      display: inline-block;
+      width: 500px;
+      margin-top: 50px;
+      padding: 20px 50px;
+      font-size: 2em;
       box-sizing: border-box;
-      margin: 0px auto;
-      width: 600px;
-      height: 300px;
       border: 1px solid #979797;
-      .logo {
-        display: flex;
-        //margin: 10px;
-        justify-content: center;
-        padding: 20px;
-        img {
-          width: 200px;
-          max-height: 200px;
-        }
-      }
-      .logo-text {
-        display: flex;
-        justify-content: center;
-        font-size: 36px;
-        strong {
-          padding-right: 1em;
-          font-weight: 700;
-        }
-      }
-    }
-    .form-wrapper {
-      .poll-code {
-        font-size: 1.5em;
-        display: flex;
-        justify-content: center;
-        input {
-          display: inline-block;
-          margin-left: 2px;
-          padding: 0 5px;
-        }
-      }
-      .poll-submit {
-        display: block;
-        margin: 50px auto;
-        text-align: center;
-        button {
-          display: inline-block;
-          padding: 15px 40px;
-          font-weight: 700;
-          font-size: 1.22em;
-          //background: #979797;
-          cursor: pointer;
-          border-radius: 5px;
-          color: #FFFFFF;
-          background: #009dda;
-          border: 1px #979797 solid;
-        }
-      }
     }
   }
+  .toggle {
+    margin: 20px;
+    padding-right: 20px;
+    text-align: right;
+    .multiple {
+      display: inline-block;
+      width: 1em;
+      height: 1em;
+      vertical-align: middle;
+      margin-left: 2px;
+      padding: 0 10px;
+    }
+    .multiple-text {
+      padding: 0 10px;
+    }
+
+  }
+  .question-list {
+    text-align: left;
+    font-size: 1.5em;
+  }
+  .question-submit {
+    display: block;
+    margin: 50px auto;
+    text-align: center;
+    button {
+      display: inline-block;
+      padding: 15px 40px;
+      font-weight: 700;
+      font-size: 1.22em;
+      //background: #979797;
+      cursor: pointer;
+      border-radius: 5px;
+      color: #FFFFFF;
+      background: #009dda;
+      border: 1px #979797 solid;
+    }
+  }
+
 }
