【story=71】完善个人投票组件

--- a/app/src/components/users/register/index.less
+++ b/app/src/components/users/register/index.less
@@ -41,8 +41,9 @@
       justify-content: center;
       padding: 5px;
       vertical-align: top;
+      align-items: center;
       .register-label {
-        flex: 0 0 70px;
+        flex: 0 0 80px;
         text-align: right;
         padding-right: 10px;
       }
@@ -55,12 +56,13 @@
       .register-button{
         flex: 0 1 100px;
         margin-left: 5px;
-        width: 100px;
+        width: 120px;
         outline: none;
         border: 1px;
         border-radius: 2px;
         font-size: 0.7em;
-        background: #4990E2;
+        color: #ffffff;
+        background: -webkit-linear-gradient(top, #52affa 20%, #4990E2);
         cursor: pointer;
       }
       .register-checkbox{
@@ -69,12 +71,14 @@
       }
       .create-user {
         padding: 10px 20px;
-        font-size: 14px;
         border: 1px;
-        outline: none;
-        background: #4990E2;
-        cursor: pointer;
         border-radius: 5px;
+        outline: none;
+        font-size: 14px;
+        letter-spacing: 2px;
+        color: #ffffff;
+        background: -webkit-linear-gradient(top, #52affa 20%, #4990E2);
+        cursor: pointer;
       }
       span{
         a{
