--- a/app/src/components/content/personalcenter/index.less
+++ b/app/src/components/content/personalcenter/index.less
@@ -28,39 +28,44 @@
       justify-content: center;
       padding: 20px;
       vertical-align: top;
-      .personal-label,
-      .personal-detail{
+      align-items: center;
+      .personal-label {
         flex: 0 0 70px;
+        text-align: right;
+        padding: 8px;
+        border: none;
+      }
+      .personal-detail {
         text-align: center;
         padding: 8px;
+        border: none;
       }
-      .personal-password {
-        width: 100px;
+      .personal-password{
+        width: 120px;
         height: 25px;
-        border-radius: 5px;
-        padding: 5px;
-        position: relative;
-        button{
-          position: absolute;
-          right: -70px;
-          top: 0;
-          width: 70px;
-          padding: 10px;
-          font-size: 10px;
-          border: 1px;
-          outline: none;
-          background: #4990E2;
-          cursor: pointer;
-          border-radius: 5px;
-        }
+        text-align: right;
       }
+      button {
+        padding: 10px;
+        border: 1px;
+        border-radius: 5px;
+        outline: none;
+        font-size: 10px;
+        color: #ffffff;
+        background: -webkit-linear-gradient(top, #52affa 20%, #4990E2);
+        cursor: pointer;
+        position: relative;
+        left: 22px;
+      }
+
       .save-password {
         width: 100px;
         padding: 10px 20px;
         font-size: 14px;
         border: 1px;
         outline: none;
-        background: #4990E2;
+        color: #ffffff;
+        background: -webkit-linear-gradient(top, #52affa 20%, #4990E2);
         cursor: pointer;
         border-radius: 5px;
       }
