--- a/app/src/components/content/vote/index.less
+++ b/app/src/components/content/vote/index.less
@@ -1,18 +1,18 @@
 .vote-wrapper {
   margin-top: 1px;
-  height: 652px;
+  height: 100%;
   width: 100%;
   .mask {
     position: absolute;
     width: 100%;
-    height: 652px;
+    height: 542px;
     z-index: -1;
     background: #d8d8d8 50%;
     opacity: 0.5;
   }
   .vote {
     position: absolute;
-    top: 72px;
+    top: 34px;
     left: 45px;
   }
 }
