--- a/app/src/components/content/vote/vote-item/index.less
+++ b/app/src/components/content/vote/vote-item/index.less
@@ -1,7 +1,7 @@
 .vote-item {
   display: inline-block;
-  margin: 0 23px 40px 23px;
-  border: 1px solid #d8d8d8;
+  margin: 0 23px 20px 23px;
+  border: 1px solid #979797;
   width: 340px;
   height: 230px;
   &-status {
@@ -13,32 +13,80 @@
     align-items: center;
   }
   &-box {
-    height: 238px;
-    width: 340px;
+    height: 228px;
+    width: 338px;
     background: #ffffff;
     .vote-item-icon {
       height: 80px;
       margin: 28px 0 0 135px;
     }
-    p{
+    p {
       margin-left: 13px;
       margin-top: 39px;
     }
-    .vote-item-btn {
+    .vote-item-btn{
       margin-left: 48px;
       border: 1px inset #979797;
       height: 30px;
       width: 46px;
       opacity: 0.9;
       border-radius: 10px;
-      box-shadow: 5px 0 0 0;
-      background: -webkit-linear-gradient(top, #D0182C 77%, #A21322 98%, #000000);
+      box-shadow: -1px 2px 3px #9f9f9f;
       font: 12px "PingFang SC";
       color: #ffffff;
-      outline:0 none !important;
+      outline: 0 none !important;
+      cursor: pointer;
+    }
+    .vote-item-btn-action {
+      background: -webkit-linear-gradient(top, #d22133 66%, #8b101d 98%, #000000);
+    }
+    .vote-item-btn-finish{
+      background: #000000;
     }
   }
-  .vote-confirm{
+  .vote-confirm {
+    position: absolute;
+    left: 50%;
+    top: 30%;
+    margin: 0 0 0 -205px;
+    padding: 50px 48px 72px 48px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 180px;
+    width: 314px;
+    background: #cfe0a0;
+    .mask {
+      opacity: 0;
+    }
+    &-warn {
+      display: flex;
+      align-items: center;
+      &-icon {
+        height: 41px;
+        width: 41px;
+      }
+      &-auto {
+        flex: 1;
+      }
+      &-text {
+        flex: 0 0 80%;
+        font: 18px PingFangSC-Regular;
+        color: #bc1b09;
+      }
+    }
+    &-select {
+      display: flex;
+      justify-content: space-around;
+      &-btn {
+        height: 40px;
+        width: 74px;
+        margin: 0 20px;
+      }
+    }
+  }
+  .vote-confirm-hid{
     display: none;
   }
 }
