【story=66】个人中心页面重新布局完成

--- a/app/src/components/content/personalcenter/index.less
+++ b/app/src/components/content/personalcenter/index.less
@@ -59,9 +59,11 @@
       }
 
       .save-password {
-        width: 100px;
+        width: 70px;
+        height:38px;
         padding: 10px 20px;
-        font-size: 14px;
+        margin:10px 40px;
+        font-size: 8px;
         border: 1px;
         outline: none;
         color: #ffffff;
