【story=71】修改了fetch api

--- a/app/src/components/content/raise/index.less
+++ b/app/src/components/content/raise/index.less
@@ -34,7 +34,7 @@
         height: 22px;
         width: 300px;
         i {
-          color: #8b101d;
+          color: #e30001;
           font-weight: 100;    //调到最细是为了让减号能正常显示
           cursor: pointer;
         }
