--- a/app/src/components/users/login/index.less
+++ b/app/src/components/users/login/index.less
@@ -17,7 +17,7 @@
     top: 100px;
     left: 390px;
     width: 500px;
-    height: 350px;
+    height: 370px;
     background: #fff;
     box-shadow: 4px 4px 2px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
@@ -29,13 +29,13 @@
       box-sizing: border-box;
       background: linear-gradient(#80C3F3, #4990E2);
       //border: 1px inset #979797;
-      height: 20px;
+      height: 25px;
       width: 100%;
       img {
         height: 15px;
         width: 15px;
         position: absolute;
-        top: 3px;
+        top: 5px;
         right: 5px;
       }
     }
@@ -60,7 +60,7 @@
     }
     .icon-wrapper {
 
-    width: 270px;
+      width: 270px;
       display: flex;
       margin: 10px auto;
       .icon-item {
@@ -72,31 +72,12 @@
       width: 270px;
       display: flex;
       margin: 5px auto;
-      .login-input {
-        box-sizing: border-box;
-        width: 270px;
-        height: 30px;
-        border: 1px #979797 solid;
-        padding: 5px;
-        border-radius: 9px;
-        outline: none;
-        margin: 8px 0;
-
-      }
-      .login-button {
-        display: block;
-        width: 148px;
-        height: 30px;
-        margin: 8px auto;
-        border: 1px;
-        outline: none;
-        color: rgba(0,0,0,0.8);
-        border-radius: 9px;
-        background: linear-gradient(#80C3F3, #4990E2);
-        cursor: pointer;
-        transition: all 0.4s;
-        &:hover{
-          box-shadow: 2px 1px 2px 1px rgba(0, 0, 0, 0.2);
+      .from-boxes {
+        margin: 10px auto;
+        .from-button {
+          display: block;
+          margin: 0 auto;
+          width: 100px;
         }
       }
     }
@@ -110,12 +91,12 @@
         //padding: 0 200px;
         margin: 0 20px;
       }
-      .line-through-line{
+      .line-through-line {
         flex: 1;
         //width: 100px;
         position: relative;
         top: -5px;
-        border-bottom: 2px solid #979797 ;
+        border-bottom: 2px solid #979797;
       }
     }
   }
