--- a/app/src/components/users/register/index.less
+++ b/app/src/components/users/register/index.less
@@ -6,13 +6,14 @@
   background: #d8d8d8 50%;
   opacity: 0.5;
 }
+
 .register {
   //display:none;
   position: absolute;
-  top: 100px;
+  top: 50px;
   left: 390px;
   width: 500px;
-  height: 350px;
+  height: 440px;
   background: #fff;
   box-shadow: 4px 4px 2px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
@@ -22,11 +23,11 @@
     //border-radius: 5px 5px 0 0;
     background: linear-gradient(#80C3F3, #4990E2);
     //border: 1px inset #979797;
-    height: 20px;
+    height: 25px;
     width: 100%;
-    img{
+    img {
       position: absolute;
-      top: 3px;
+      top: 5px;
       right: 5px;
 
     }
@@ -36,65 +37,25 @@
     margin: 23px auto;
     font-size: 14px;
     vertical-align: top;
-    .form-item {
-      display: flex;
-      justify-content: center;
-      padding: 5px;
-      vertical-align: top;
-      align-items: center;
-      .register-label {
-        flex: 0 0 80px;
-        text-align: right;
-        padding-right: 10px;
+    .from-item {
+      .button-register {
+        display: block;
+        margin: 0 auto;
       }
-      .register-input {
-        flex: 1;
-        height: 20px;
-        border: 1px solid #8B8B8B;
-        border-radius: 2px;
-      }
-      .register-button{
-        flex: 0 1 100px;
-        margin-left: 5px;
-        width: 120px;
-        outline: none;
-        border: 1px;
-        border-radius: 2px;
-        font-size: 0.7em;
-        color: #ffffff;
-        background: -webkit-linear-gradient(top, #52affa 20%, #4990E2);
-        cursor: pointer;
-      }
-      .register-checkbox{
-        height:14px;
-        width: 14px;
-      }
-      .create-user {
-        padding: 10px 20px;
-        border: 1px;
-        border-radius: 5px;
-        outline: none;
-        font-size: 14px;
-        letter-spacing: 2px;
-        color: #ffffff;
-        background: -webkit-linear-gradient(top, #52affa 20%, #4990E2);
-        cursor: pointer;
-      }
-      span{
-        a{
-          text-decoration: none;
-          color: #FF4100;
-        }
+    }
+    span {
+      a {
+        text-decoration: none;
+        color: #FF4100;
       }
     }
   }
-  .login {
-    display: flex;
-    justify-content: center;
-    a{
-      font-size: 14px;
-      text-decoration: none;
-      color: #FF4100;
-    }
+}
+
+.login {
+  a {
+    font-size: 12px;
+    text-decoration: none;
+    color: #FF4100;
   }
 }
