--- a/app/src/components/content/raise/index.less
+++ b/app/src/components/content/raise/index.less
@@ -2,105 +2,32 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  font: 16px "PingFang SC";   //字体过小时，减号无法正常显示
-  .mask {
-  }
+  font: 16px "PingFang SC"; //字体过小时，减号无法正常显示
   .raise {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     padding: 15px;
-    margin-top: 30px;
-    width: 330px;
+    margin-top: 10px;
+    width: 500px;
     background: #ffffff;
     opacity: 1;
-    .header {
-      margin: 10px 0 5px 0;
-      input {
-        padding: 0 5px 0 5px;
-        border: none;
-        border-bottom: 1px solid #d8d8d8;
-      }
+    box-shadow: 4px 4px 2px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    .raise-form {
+      margin: 0 auto;
     }
-    .options {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      align-items: center;
-      &-item {
-        margin: 15px 0 0 0;
-        border: none;
-        border-bottom: 1px solid #d8d8d8;
-        height: 22px;
-        width: 300px;
-        i {
-          color: #e30001;
-          font-weight: 100;    //调到最细是为了让减号能正常显示
-          cursor: pointer;
-        }
-        input {
-          margin-left: 5px;
-          padding: 0 5px 0 5px;
-          border: none;
-          overflow: hidden;
-        }
-      }
-      &-bar {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-top: 36px;
-        width: 300px;
-        color: #009dda;
-        i {
-          color: #009dda;
-          cursor: pointer;
-        }
-        &-add {
-          margin-left: 5px;
-        }
-        &-selection {
-          font: 22px "sans-serif";
-        }
-      }
-    }
-    .option-more {
-      margin-top: 36px;
-      &-item {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin: 0 0 15px 0;
-        border: none;
-        border-bottom: 1px solid #f1f1f1;
-        height: 22px;
-        width: 300px;
-        &-span {
-          flex: 0 0 85px;
-        }
-        input {
-          border: 2px outset #d4d4d4;
-          padding: 0 5px 0 5px;
-          width: 140px
-
-        }
-
-      }
-    }
-    .push{
-      margin-top: 15px;
-      height: 40px;
-      width: 200px;
-      border: 1px;
-      border-radius: 9px;
-      color: #ffffff;
-      background: linear-gradient(#80C3F3, #4990E2);
+    .dynamic-delete-button {
       cursor: pointer;
-      transition: all 0.4s;
-      &:hover{
-        box-shadow: 2px 1px 2px 1px rgba(0, 0, 0, 0.2);
-        color: #ffffff;
-      }
+      position: relative;
+      top: 4px;
+      font-size: 24px;
+      color: #999;
+      transition: all .3s;
+    }
+    .dynamic-delete-button:hover {
+      color: #777;
+    }
+    .dynamic-delete-button[disabled] {
+      cursor: not-allowed;
+      opacity: 0.5;
     }
   }
 }
