--- a/app/src/components/content/raise/index.less
+++ b/app/src/components/content/raise/index.less
@@ -14,6 +14,9 @@
     .raise-form {
       margin: 0 auto;
     }
+    .switch{
+      margin-top: -13px;
+    }
     .dynamic-delete-button {
       cursor: pointer;
       position: relative;
