【story=74】输入投票码连接到redux(子组件传参未完成)

--- a/app/src/components/content/home/index.less
+++ b/app/src/components/content/home/index.less
@@ -1,7 +1,7 @@
 .vote-button {
-  position: absolute;
-  right: 100px;
-  bottom: 20px;
+  position: relative;
+  right: 20px;
+  top: 610px;
   height: 2.5em;
   border: 1px;
   box-sizing: border-box;
