【story=68】创建投票 网络请求完成

--- a/app/src/components/content/poll/index.less
+++ b/app/src/components/content/poll/index.less
@@ -45,6 +45,7 @@
         font-size: 1.5em;
         display: flex;
         justify-content: center;
+        margin-bottom: 10px;
         input {
           display: inline-block;
           margin-left: 2px;
