--- a/app/src/components/plugin/banner/index.less
+++ b/app/src/components/plugin/banner/index.less
@@ -1,12 +1,11 @@
-.banner{
-  width: 100%;
-  //z-index: -1;
-  img{
-    width: 100%;
-    //height: 670px;
+
+.slider{
+  max-width: 1280px;
+  min-width: 640px;
+  width: auto;
+  .swiper-container {
+    max-width: 1280px;
+    min-width: 640px;
+    width: auto;
   }
-}
-.swiper-button-next, .swiper-button-prev, .swiper-pagination{
-  position: relative;
-  z-index: 0;
 }
