--- a/app/src/components/app.less
+++ b/app/src/components/app.less
@@ -6,11 +6,10 @@ div, p {
 }
 
 .App {
-  //display: flex;
-  //justify-content: center;
-  //align-items: center;
   margin: 0 auto;
-  width: 1280px;
+  max-width: 1280px;
+  min-width: 640px;
+  width:auto;
   height: 614px;
   .nav-wrapper {
     display: flex;
@@ -53,7 +52,9 @@ div, p {
     }
   }
   .banner-wrapper {
-    width: 1280px;
+    max-width: 1280px;
+    min-width: 640px;
+    width: auto;
     position: absolute;
     top: 70px;
     z-index: -10;
@@ -63,6 +64,40 @@ div, p {
     width: 100%;
     height: 542px;
 
+  }
+  .join-button {
+    position: relative;
+    left: 20px;
+    top: 15px;
+    height: 3em;
+    border: 1px;
+    box-sizing: border-box;
+
+    color: #000;
+    padding: 0 30px;
+    background: #009dda;
+    font-size: 16px;
+    line-height: 16px;
+    outline: none;
+    cursor: pointer;
+
+    border-radius: 15px;
+    opacity: 0.7;
+    transition: all 0.4s;
+    &:hover {
+      opacity: 1;
+    }
+    .join-wrapper {
+      width: 1280px;
+      position: absolute;
+      top: 70px;
+      z-index: -10;
+      span {
+        line-height: 2.5em;
+        //text-underline: none;
+        color: #FFFFFF;
+      }
+    }
   }
 }
 
