--- a/app/src/components/content/home/index.less
+++ b/app/src/components/content/home/index.less
@@ -2,15 +2,15 @@
   position: relative;
   right: 20px;
   top: 610px;
-  height: 2.5em;
+  height: 50px;
   border: 1px;
   box-sizing: border-box;
 
   color: #000;
   padding: 0 30px;
   background: #009dda;
-  font-size: 1.5em;
-  line-height: 2.5em;
+  font-size: 16px;
+  line-height: 16px;
   outline: none;
   cursor: pointer;
 
