【story=72】提交单次投票完成

--- a/app/src/components/content/question/index.less
+++ b/app/src/components/content/question/index.less
@@ -1,6 +1,6 @@
 .question-wrapper {
-  width: 800px;
-  height: 600px;
+  max-width: 800px;
+  max-height: 400px;
   border: 1px solid #979797;
   margin: 0 auto;
   .mask {
@@ -13,14 +13,14 @@
     opacity: 1;
   }
   .list-wrapper {
-    width: 500px;
-    margin: 0 auto;
+    max-width: 500px;
+    margin: 20px auto;
     //border: 1px solid #979797;
     border-radius: 5px;
     text-align: center;
     .title {
       display: inline-block;
-      width: 500px;
+      max-width: 500px;
       margin-top: 50px;
       padding: 20px 50px;
       font-size: 2em;
