【story=71】我的投票查看选项完善（后端接口不能对接）编辑选项单选多选自动选择

--- a/app/src/components/content/qrcode/index.less
+++ b/app/src/components/content/qrcode/index.less
@@ -7,6 +7,17 @@
     align-items: center;
     align-content: center;
     font: 16px "PingFang SC"; //字体过小时，减号无法正常显示
+    .qrc-id{
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      align-content: center;
+      width: 260px;
+      height: 50px;
+      border: 1px solid #8B8B8B;
+      margin-top: 50px;
+      margin-bottom: -90px;
+    }
     .qrc {
       width: 260px;
       height: 260px;
