--- a/app/src/components/content/vote/statistics/index.less
+++ b/app/src/components/content/vote/statistics/index.less
@@ -40,9 +40,15 @@
     }
   }
   .progress-bar {
-    margin-top: 80px;
+    margin-top: 100px;
     .progress-item {
       margin: 20px;
+      .vote-title{
+        flex: 0 0 160px;
+        text-align: left;
+        padding: 8px;
+        font-size: 14px;
+      }
       p {
         flex: 0 0 70px;
         text-align: right;
